--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
 
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <a href="http://kmbrandt94.github.io/fan-page/"><img src="Fan-Page.png" alt="Fan-Page"></a>
+                <a href="http://kmbrandt94.github.io/fan-page/"><img src="FanPage.png" alt="Fan-Page"></a>
                 <div class="carousel-caption">
                     <h3>Fan-Page</h3>
                 </div>
             </div>
 
             <div class="item">
-                <a href="http://kmbrandt94.github.io/ptCaseStudy/"><img src="Pacific%20Trails.png" alt="Pacific Trails"></a>
+                <a href="http://kmbrandt94.github.io/ptCaseStudy/"><img src="PacificTrails.png" alt="Pacific Trails"></a>
                 <div class="carousel-caption">
                     <h3>Pacific Trails</h3>
                 </div>
             </div>
 
             <div class="item">
-                <img src="HTC%20Phones.png" alt="HTC Phones">
+                <img src="HTC%20Phones.png" alt="HTCphones">
                 <div class="carousel-caption">
                     <h3>HTC Phones</h3>
                 </div>
             </div>
 
             <div class="item">
-                <img src="Example%20GUI.png" alt="Example GUI">
+                <img src="Example%20GUI.png" alt="ExampleGUI">
                 <div class="carousel-caption">
                     <h3>Example GUI</h3>
                 </div>
