--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
             </div>
 
             <div class="item">
-                <img src="HTC%20Phones.png" alt="HTCphones">
+                <img src="HTCphones.png" alt="HTC Phones">
                 <div class="carousel-caption">
                     <h3>HTC Phones</h3>
                 </div>
             </div>
 
             <div class="item">
-                <img src="Example%20GUI.png" alt="ExampleGUI">
+                <img src="ExampleGUI.png" alt="Example GUI">
                 <div class="carousel-caption">
                     <h3>Example GUI</h3>
                 </div>
